# etaHEN-SDK

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
ELF_samples/http2/: CMakeLists.txt
ELF_samples/http2/source/: main.cpp
ELF_samples/hwinfo/: CMakeLists.txt
ELF_samples/hwinfo/source/: main.cpp
ELF_samples/klog_printf/: CMakeLists.txt
ELF_samples/klog_printf/source/: main.cpp
ELF_samples/list_files/: CMakeLists.txt
ELF_samples/list_files/source/: main.cpp
ELF_samples/tcp_echo_server/: CMakeLists.txt
ELF_samples/tcp_echo_server/source/: main.cpp
Plugin_samples/: kernel_helpers.c
Plugin_samples/Illusion_cheats/: CMakeLists.txt
Plugin_samples/Illusion_cheats/source/: game_patch.cpp  game_patch_memory.cpp  game_patch_memory.hpp  game_patch_thread.cpp  game_patch_xml.cpp  game_patch_xml.hpp  game_patch_xml_cfg.hpp  ipc.hpp  ipc_server.cpp  main.cpp
Plugin_samples/PS5Debug/: CMakeLists.txt
Plugin_samples/PS5Debug/include/: auth.h  console.h  debug.h  elfldr.h  jailbreak.h  kern.h  libsce_defs.h  mdbg.h  net.h  proc.h  process_utils.h  protocol.h  server.h  tracer.h  types.h  ucred.h  utils.h
Plugin_samples/PS5Debug/source/: console.c  crt0.c  debug.c  elfldr.c  jailbreak.c  kern.c  main.c  mdbg.c  net.c  proc.c  process_utils.c  server.c  tracer.c  ucred.c  utils.c
Plugin_samples/utility_daemon/: CMakeLists.txt
Plugin_samples/utility_daemon/source/: kern.c
hwinfo_sample/: CMakeLists.txt
hwinfo_sample/source/: dialog.h  main.cpp
hwinfo_sample/source/fmt/: chrono.h  format-inl.h
include/: Controller.h  PS4DBG.hpp  Process.hpp  Registers.hpp  backtrace.hpp  dbg.hpp  elfldr.hpp  global.h  gpu_address_internal.h  hijacker.hpp  kernel.hpp  klog.hpp  log_base.h  md5.h  mempack.h  metadata.h  monodefs.h  mutex.hpp  nid.hpp  notify.hpp  painter.hpp  print.hpp  regsinfo.h  regsinfo_private.h  sqlite3.h  tiler-sse2.h  util.hpp
include/SDL2/: SDL_cpuinfo.h
include/dbg/: dbg.hpp
include/decryptor_inc/: authmgr.h  sbl.h  self.h
include/hijacker/: hijacker.hpp
include/kernel/: proc.hpp  rtld.hpp
include/nid_resolver/: resolver.h  sysmodules.h
lib/: make_plugin.py  ps5debug.elf.h
libNidResolver/: .gitignore  CMakeLists.txt  linker.x
libNidResolver/source/: nid.c  nid.h  resolver.c  sha1-x86.c  sysmodules.c
libelfloader/: CMakeLists.txt
libelfloader/source/: elfldr.c  elfldr.h  hde64.c  hde64.h  jailbreak.c  memory.c  memory.h  module.c  module.h  offsets.c  proc.h  rtld.c  table64.h  tracer.h
libhijacker/: CMakeLists.txt
libhijacker/source/: backtrace.cpp  dbg.cpp  hijacker.cpp  notify.cpp  offsets.cpp
libhijacker/source/elf/: elf.cpp
stubber/: main.go
