cmake_minimum_required (VERSION 3.20)

project("etaHEN-ELF")

set(PROJECT_ROOT "${CMAKE_CURRENT_SOURCE_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_ROOT}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_ROOT}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_ROOT}/lib)	# static libs are archive

include_directories	(SYSTEM "${PROJECT_ROOT}/include")
include_directories(SYSTEM "${D_PS5SDK}")
include_directories(SYSTEM "${D_PS5SDK}/include")

add_subdirectory(libhijacker)
add_subdirectory(libNidResolver)
add_subdirectory(ELF_samples/hwinfo)
